# aeroanalyzer

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE.txt  CMakeLists.txt  README.md  build.ps1  build_mingw.ps1  implementation_plan.md  plan.txt  todonext.md  validate_avl.ps1
.claude/: settings.local.json
app/: main.cpp  wing2csv.cpp
config/: baseline.cfg  sm0.cfg
data/airfoils/: README.txt
include/aeroanalyzer/: aero_neuralfoil.h  aero_panel.h  aero_potential.h  aero_viscous.h  aero_xfoil.h  airfoil_io.h  avl_export.h  config.h  control.h  engine_core.h  evaluate.h  ga.h  geom.h  linalg.h  massprops.h  seeds.h  stability.h  xfoil_lib.h
scratch/: NEXT_SESSION_PROMPT.md  avl_commands.txt  e_probe.cpp  geometry_diag.cpp  knee_conv.cpp  knee_xcheck.cpp  loading_probe.cpp  mesh_probe.cpp  normal_probe.cpp  panel_full_probe.cpp  panel_fuzz.cpp  panel_probe.cpp  panel_solve_probe.cpp  panel_test.cpp  panel_timing.cpp  panel_vs_vlm.cpp  rect_cond.cpp  rect_conv.cpp  resid_probe.cpp  run_avl_all.txt  twist_cmp.cpp  uniform_vs_grad.cpp  vlm_probe.cpp  vlm_ref.cpp  xfoil_cyl_probe.cpp  xfoil_inviscid_probe.cpp  xfoil_visc_probe.cpp  xfoil_xcheck.cpp  xnp_probe.cpp
src/: aero_neuralfoil.cpp  aero_panel.cpp  aero_potential.cpp  aero_viscous.cpp  aero_xfoil.cpp  airfoil_io.cpp  avl_export.cpp  config.cpp  control.cpp  evaluate.cpp  ga.cpp  geom.cpp  massprops.cpp  seeds.cpp  stability.cpp
tests/: test_aero.cpp  test_airfoil_io.cpp  test_ga.cpp  test_geom.cpp  test_harness.h  test_main.cpp  test_massprops.cpp  test_neuralfoil.cpp  test_seeds.cpp  test_surrogate.cpp  test_xfoil.cpp
tools/: build_surrogate.cpp  nf_golden.py
tools/xfoil_lib/: xfstubs.f  xfwrap.f
